# meshroomBatcher

./: .coveragerc  .gitignore  .gitlab-ci.yml  404.html  CMakeLists.txt  README.md  ROADMAP.html  ROADMAP.md  entityProviders.html  index.html  package.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: buildDocs.sh  buildVenv.sh  mkdocs.yml
docs/custom/partials/: social.html
docs/source/: entityProviders.md  index.md
mock/: README.md  create_shot_scene.json  create_version_scene.json  mockEntityProvider.py  test_template.mg
python/mock/: create_asset_scene.json  create_sequence_scene.json  mockEntityProvider.py
python/pipelineBatcher/: entityProvider.py  utilities.py
python/pipelineBatcher/components/: treeModel.py
python/pipelineBatcher/meshroom/: menu.py
python/pipelineBatcher/ui/: __main__.py  app.py  entities.py  entityProvider.py  instanciation.py  templates.py  utilities.py
python/pipelineBatcher/ui/qml/: EntityColors.qml  EntityDelegate.qml  EntityPage.qml  EntitySelectionSummary.qml  EntityTreeNode.qml  InstanciationPage.qml  NavigationButton.qml  ParameterDelegate.qml  ParameterPage.qml  TBColors.qml  TemplateDelegate.qml  TemplatePage.qml  app.qml  qmldir
python/pipelineBatcher/ui/qml/PBComponents/: PBColors.qml  Snackbar.qml  qmldir
python/providers/: imageFoldersProvider.py
resources/: test_template.mg
resources/batchPipelines/: README.md  create_asset_scene.json  create_sequence_scene.json  create_shot_scene.json  create_version_scene.json  test_template.json  test_template.mg
search/: search_index.json
tests/: conftest.py  test_pipelineBatcher.py  test_templates.py
tests/resources/batchPipelines/: create_scene.json  create_scene.mg
